# rerout-sdks

./: .gitignore  BRIEF.md  README.md
dart/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
dart/lib/: rerout.dart
dart/lib/src/: rerout.dart
dart/lib/src/models/: ab_variant.dart  batch_create_links.dart  create_link_request.dart  create_tag_request.dart  create_webhook_request.dart  created_webhook.dart  daily_clicks_point.dart  link_stats.dart  list_links_result.dart  list_tags_result.dart  list_webhooks_result.dart  models.dart  project_stats.dart  (+13 more)
dart/test/: models_test.dart  qr_test.dart  rerout_test.dart  smart_links_test.dart  tags_management_test.dart  webhook_signature_test.dart  webhooks_management_test.dart
dotnet/: CHANGELOG.md  Directory.Build.props  README.md  Rerout.sln
dotnet-aspnet/: .gitignore  CHANGELOG.md  Directory.Build.props  README.md  Rerout.AspNetCore.sln
dotnet-aspnet/src/Rerout.AspNetCore/: IReroutEventHandler.cs  Rerout.AspNetCore.csproj  ReroutServiceCollectionExtensions.cs  ReroutWebhookEndpointRouteBuilderExtensions.cs  ReroutWebhookEvent.cs  ReroutWebhookJson.cs  ReroutWebhookMiddleware.cs  ReroutWebhookOptions.cs
dotnet-aspnet/tests/Rerout.AspNetCore.Tests/: Program.cs  RecordingEventHandler.cs  Rerout.AspNetCore.Tests.csproj  ReroutWebhookFactory.cs  ServiceCollectionTests.cs  WebhookMiddlewareTests.cs  WebhookSigning.cs
dotnet/src/Rerout/: Rerout.csproj  ReroutClient.cs  ReroutException.cs  ReroutOptions.cs
dotnet/tests/Rerout.Tests/: ConstructorTests.cs  ConversionsTests.cs  LinksTests.cs  ModelTests.cs  ProjectAndQrTests.cs  Rerout.Tests.csproj  SignatureVerifierTests.cs  SmartLinksTests.cs  StubHttpMessageHandler.cs  TagsTests.cs  TestHelpers.cs  TransportTests.cs  WebhooksTests.cs
go/: .gitignore  CHANGELOG.md  README.md  go.mod
go/rerout/: batch_test.go  client.go  client_test.go  conversions.go  conversions_test.go  errors.go  links.go  links_test.go  models.go  models_test.go  project.go  qr.go  qr_test.go  smartlinks_test.go  tags.go  tags_test.go  webhooks.go  webhooks_management.go  webhooks_management_test.go  webhooks_test.go
java/: .gitignore  CHANGELOG.md  README.md  build.gradle  gradle.properties  settings.gradle
kotlin/: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin-spring/: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
php/: .php-cs-fixer.dist.php  CHANGELOG.md  README.md  composer.json  phpunit.xml
php-laravel/: .gitignore  .php-cs-fixer.dist.php  CHANGELOG.md  README.md  composer.json  phpunit.xml
php-laravel/config/: rerout.php
php-laravel/routes/: web.php
php-laravel/src/: ReroutServiceProvider.php
php-laravel/src/Console/: PingCommand.php
php-laravel/src/Events/: DomainFailed.php  LinkClicked.php  QrScanned.php
php-laravel/src/Facades/: Rerout.php
php-laravel/src/Http/: WebhookController.php
php-laravel/tests/: PingCommandTest.php  ServiceProviderTest.php  TestCase.php  WebhookControllerTest.php
php/src/: Rerout.php
php/src/Exceptions/: ReroutException.php
php/src/Models/: AbVariant.php  AbVariantInput.php  BatchCreateLinksResult.php  BatchLinkInput.php  BatchLinkResult.php  CreateLinkInput.php  CreateTagInput.php  CreateWebhookInput.php  CreatedWebhook.php  DailyClicksPoint.php  Link.php  LinkStats.php  ListLinksResult.php  ListTagsResult.php  ListWebhooksResult.php  ProjectStats.php  QrOptions.php  RecordConversionInput.php  RecordedConversion.php  RoutingRule.php  StatsBreakdown.php  Tag.php  TagSummary.php  UpdateLinkInput.php  UpdateTagInput.php  Webhook.php
php/src/Resources/: Conversions.php  Links.php  Project.php  Qr.php  Tags.php  Webhooks.php
php/src/Webhooks/: SignatureVerifier.php
php/tests/: ConversionsTest.php  LinksTest.php  QrTest.php  ReroutTest.php  SmartLinksTest.php  TagsTest.php  TestCase.php  WebhooksManagementTest.php  WebhooksTest.php
python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python-django/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python-django/src/rerout_django/: __init__.py  apps.py  conf.py  signals.py  urls.py  views.py
python-django/tests/: conftest.py  test_client.py  test_signals.py  test_views.py  urls.py
python/src/rerout/: __init__.py  _client.py  _errors.py  _models.py  _webhooks.py
python/tests/: conftest.py  test_batch.py  test_client.py  test_conversions.py  test_links.py  test_qr.py  test_smart_links.py  test_tags.py  test_webhooks.py  test_webhooks_management.py
ruby/: .gitignore  .rubocop.yml  CHANGELOG.md  README.md  rerout.gemspec
ruby-rails/: .rubocop.yml  CHANGELOG.md  Gemfile  README.md  Rakefile  rerout-rails.gemspec
ruby-rails/lib/rerout/: rails.rb
ruby-rails/spec/: spec_helper.rb
ruby-rails/spec/generators/: install_generator_spec.rb
ruby-rails/spec/support/: test_app.rb
ruby/lib/: rerout.rb
ruby/lib/rerout/: client.rb  conversions_resource.rb  create_link_input.rb  create_tag_input.rb  create_webhook_input.rb  error.rb  input_serialization.rb  links.rb  models.rb  project.rb  qr.rb  qr_options.rb  tags_resource.rb  update_link_input.rb  update_tag_input.rb  version.rb  webhooks.rb  webhooks_resource.rb
ruby/spec/: spec_helper.rb
ruby/spec/rerout/: batch_spec.rb  client_spec.rb  conversions_spec.rb  links_spec.rb  qr_spec.rb  smart_links_spec.rb  tags_spec.rb  webhooks_management_spec.rb  webhooks_spec.rb
rust/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
rust/src/: client.rs  conversions.rs  error.rs  lib.rs  links.rs  models.rs  project.rs  qr.rs  tags.rs  webhooks.rs  webhooks_management.rs
rust/tests/: client.rs  links.rs  qr.rs  smartlinks.rs  tags.rs  webhooks.rs  webhooks_management.rs
typescript/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
typescript/src/: client.ts  errors.ts  index.ts  qr.ts  types.ts  webhooks.ts
typescript/test/: client.test.ts  conversions.test.ts  links.test.ts  qr.test.ts  tags.test.ts  webhooks-management.test.ts  webhooks.test.ts
(+110 files in other folders)
