[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "rerout-django"
version = "0.1.0"
description = "Official Django integration for the Rerout branded-link API."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Codecraft Solutions", email = "hello@codecraftsolutions.co.za" },
]
maintainers = [
    { name = "Codecraft Solutions", email = "hello@codecraftsolutions.co.za" },
]
keywords = [
    "rerout",
    "django",
    "short-links",
    "url-shortener",
    "qr-codes",
    "webhooks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "rerout>=0.1,<1.0",
    "django>=4.2,<6.0",
]

[project.optional-dependencies]
# ``rerout`` is pinned to the sibling source checkout so the test suite runs
# against the local base SDK rather than whatever is published to PyPI.
# ``{root:uri}`` is expanded by Hatchling to the file:// URI of this package
# directory. Install with ``pip install -e ".[dev]"`` from this directory.
dev = [
    "rerout @ {root:uri}/../python",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "respx>=0.21",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "ruff>=0.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://rerout.co"
Repository = "https://github.com/ModestNerds-Co/rerout-sdks"
Issues = "https://github.com/ModestNerds-Co/rerout-sdks/issues"
Changelog = "https://github.com/ModestNerds-Co/rerout-sdks/blob/main/python-django/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/rerout_django"]

[tool.hatch.build.targets.sdist]
include = [
    "src/rerout_django",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

# Django is configured in-memory by tests/conftest.py via settings.configure(),
# so no DJANGO_SETTINGS_MODULE / pytest-django ini settings are needed here.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
files = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["rerout_django", "conftest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
