[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "rerout"
version = "0.1.0"
description = "Official Python SDK for the Rerout branded-link API."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Codecraft Solutions", email = "hello@codecraftsolutions.co.za" },
]
maintainers = [
    { name = "Codecraft Solutions", email = "hello@codecraftsolutions.co.za" },
]
keywords = [
    "rerout",
    "short-links",
    "url-shortener",
    "qr-codes",
    "branded-links",
    "webhooks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://rerout.co"
Repository = "https://github.com/ModestNerds-Co/rerout-sdks"
Issues = "https://github.com/ModestNerds-Co/rerout-sdks/issues"
Changelog = "https://github.com/ModestNerds-Co/rerout-sdks/blob/main/python/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/rerout"]

[tool.hatch.build.targets.sdist]
include = [
    "src/rerout",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["respx", "respx.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["rerout", "conftest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
