[package]
name = "rerout"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Official Rust SDK for the Rerout branded-link API."
license = "MIT"
repository = "https://github.com/ModestNerds-Co/rerout-sdks"
homepage = "https://rerout.co"
documentation = "https://docs.rs/rerout"
readme = "README.md"
keywords = ["rerout", "shortlink", "qr", "webhooks", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["Codecraft Solutions <hello@codecraftsolutions.co.za>"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
# Re-exposed for the webhook doctest, which signs a payload to demonstrate
# `verify_rerout_signature`. These dedupe with the matching `[dependencies]`.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
